--- a/tack/Templates/PrivateBoardAccess.html
+++ b/tack/Templates/PrivateBoardAccess.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>About MyTacks</title>
+    <script type="text/javascript" src="/static/jquery-1.6.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/semantic/semantic.min.css" />
+    <script type="text/javascript" src="/static/css/semantic/semantic.min.js"></script>
+
+
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/style2.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
+
 </head>
-<body>
-    <h2>You do not have permissions to view this board or this board does not exist! Please try again</h2>
+<body >
+<div class="ui inverted tiered menu">
+    <div class="left menu">
+        <div class="item">
+            <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">
+        </div>
+    </div>
+    <div class="right menu">
+        <div class="item">
+            <a class="item" href="/">
+                <i class="home icon"></i> Home
+            </a>
+        </div>
+    </div>
+
+</div>
+
+
+<div class="ui error message">
+
+    <div class="header">
+    <i class="warning icon"></i> It seems like you are trying to access a private board or the board does not exist. Please try again!
+    </div>
+</div>
+
+
 
 </body>
 </html>
