--- a/tack/Templates/Dashboard.html
+++ b/tack/Templates/Dashboard.html
@@ -145,6 +145,17 @@
                 </div>
             </form>
         </div>
+
+        <div id="searchTags" class="ui form segment" >
+            <form action="/searchTags" method="post" enctype="multipart/form-data">
+                <div style="display:inline;">
+                    <div class="ui label">Search for Tacks by Tags:</div>
+                    <input type="text" autocomplete="off" name="search" id="txtTagSearch" style="width:250px;" />
+                    </br>
+                    <input class="ui button blue" type="submit" name="submit" value="Search">
+                </div>
+            </form>
+        </div>
     </div></div>
 
 
