Search by Tags-Updated

--- a/tack/Templates/CreateTack.html
+++ b/tack/Templates/CreateTack.html
@@ -158,7 +158,7 @@
                         <div class="field">
                             <label for="tags">Tags:</label>
                             <div class="input">
-                                <input type="text" name="tags" placeholder="Tags separated by commas"></br>
+                                <input type="text" name="tags" placeholder="Tags separated by space"></br>
                             </div>
                         </div>
                         <div class="field">
