--- a/tack/Templates/CreateTackInBoard.html
+++ b/tack/Templates/CreateTackInBoard.html
@@ -77,7 +77,7 @@
                         <div class="field">
                             <label for="tags">Tags:</label>
                             <div class="input">
-                                <input type="text" name="tags" placeholder="Tags Separated by commas"></br>
+                                <input type="text" name="tags" placeholder="Tags Separated by Space"></br>
                             </div>
                         </div>
                         <input type="hidden" name="ex_board" value="{{ boardName }}">
