--- a/tack/Templates/CreatetackFromUrl.html
+++ b/tack/Templates/CreatetackFromUrl.html
@@ -153,7 +153,7 @@
                         <div class="field">
                             <label for="tags">Tags:</label>
                             <div class="input">
-                                <input type="text" name="tags" placeholder="Tags Separated by commas"></br>
+                                <input type="text" name="tags" placeholder="Tags Separated by Space"></br>
                             </div>
                         </div>
                         <div class="field">
