--- a/tack/Templates/DisplaySeachTags.html
+++ b/tack/Templates/DisplaySeachTags.html
@@ -10,6 +10,9 @@
     <script type="text/javascript" src="/static/css/semantic/semantic.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/style4.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/style2.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
     <link rel="stylesheet" type="text/css" href="/static/shadowbox/shadowbox.css">
     <script type="text/javascript" src="/static/shadowbox/shadowbox.js"></script>
     <script type="text/javascript">
@@ -53,10 +56,9 @@
 </div>
 
 <section class="container">
-    <div id="wrapper">
+    <div id="wrapper" style="width: 100%">
         {% if  tacks == "" %}
-            <div class="ui label">No tacks match your search!{% endif %}</div>
-
+            <div class="ui label">No tacks match your search!</div>{% endif %}
         <div class = "ui five column grid">
             {% for tack in tacks %}
                 <div class="column">
