Updated search tags ui

--- a/tack/Templates/DisplaySeachTags.html
+++ b/tack/Templates/DisplaySeachTags.html
@@ -59,7 +59,7 @@
     <div id="wrapper" style="width: 100%">
         {% if  tacks == "" %}
             <div class="ui label">No tacks match your search!</div>{% endif %}
-        <div class = "ui five column grid">
+        <div class = "ui four column grid">
             {% for tack in tacks %}
                 <div class="column">
                     <div class="ui stacked segment">
