--- a/tack/Templates/DisplayTack.html
+++ b/tack/Templates/DisplayTack.html
@@ -70,7 +70,7 @@
                             <i class="url icon"></i>Visit <a href="{{ tack.bookmark }}" style="text-decoration: none" target="_blank" class="detail">{{ tack.bookmark }}</a>
                         </div>
                         <div class="content">
-                            <i class="tags icon"></i>Tagged as: {{ tack.tags }}
+                            <i class="tags icon"></i>Tagged as: {{ tags }}
                         </div>
                         <div class="content">
                             <a class="item" href="#" style="text-decoration: none" id="edit_tack_link">
