--- a/tack/Templates/FollowUser.html
+++ b/tack/Templates/FollowUser.html
@@ -11,21 +11,50 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style2.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <script type="text/javascript">
+        function Check()
+        {
+            var checker="{{ flag }}";
+            if(checker==="True")
+            {
+                document.getElementById('maintext').innerHTML="Follow {{ userName }}"
+                document.getElementById('follow').value="Follow";
+            }
+            else
+            {
+                document.getElementById('maintext').innerHTML="Unfollow {{ userName }}"
+                document.getElementById('follow').value="UnFollow";
+            }
+            var v="{{ Done }}";
+            if(v)
+            {
+                window.parent.Shadowbox.close();
+            }
+        }
+        function execute()
+        {
+            document.sender.submit();
+            //window.parent.Shadowbox.close();
+            //window.parent.location.href="/";
+
+
+        }
+    </script>
 
 </head>
-<body>
+<body onload="Check()">
 
 <div class="container">
     <section>
         <div id="container_demo">
             <div id="wrapper">
 
-                <div class="ui top center attached blue label" style="align-content: center">Follow {{ userName }} ?
+                <div id="maintext" class="ui top center attached blue label" style="align-content: center">Follow {{ userName }} ?
                 </div>
                 <br> <br><br>
-                <form action="/SaveFollow?userName={{ userName }}" method="post" >
+                <form id="sender" name="sender" action="/SaveFollow?userName={{ userName }}" method="post" >
                  <div >
-                    <input class="ui blue button center" type="submit" value="Follow">
+                    <input name="follow" id="follow" class="ui blue button center" type="button" value="Follow" onclick="execute()" >
                  </div>
                     </form>
              </div>
