--- a/tack/Templates/DisplaySearchUser.html
+++ b/tack/Templates/DisplaySearchUser.html
@@ -60,10 +60,10 @@
                 <div class="column">
                     <div class="ui stacked segment">
                         <div class="ui stacked segment">
-                            <a id="board_ref" href="/board?boardName={{ board.Name }}"  title={{ board.Name }}>
+                            <a id="board_ref" href="/board?boardName={{ board.name }}"  title={{ board.name }}>
                                 <div class="image">
                                     <img class="rounded ui image" src="/static/images/board4.png"src="/static/images/board2.png" alt='No Image' width="200" height="200">
-                                    <h2><span>{{ board.Name }}</span></h2>
+                                    <h2><span>{{ board.name }}</span></h2>
                                 </div>
                             </a>
                         </div>
