--- a/tack/Templates/DisplayTack.html
+++ b/tack/Templates/DisplayTack.html
@@ -28,19 +28,19 @@
         <div id="container_demo">
             <div id="wrapper">
                 <div class="ui left floated medium image">
-                    {% if tack.isFavorite %}
+                    {% if tack.is_favorite %}
                         <a class="ui right blue corner label item" style="text-decoration:none;" href="#" id="confirm_fav">
                             <i class="star icon"></i>
                         </a>
-                        {% if tack.fileType == "image" %}
-                            <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="400" height="400" title={{ tack.Filename }}/>
-                        {% elif tack.fileType == "fromurl" %}
-                            <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="400" height="400" title={{ tack.Filename }}/>
+                        {% if tack.file_type == "image" %}
+                            <img src="{{ MEDIA_URL }}{{ tack.tack_file }}" alt='No Image' width="400" height="400" title={{ tack.file_name }}/>
+                        {% elif tack.file_type == "fromurl" %}
+                            <img src="{{ MEDIA_URL }}{{ tack.tack_file }}" alt='No Image' width="400" height="400" title={{ tack.file_name }}/>
                         {% else %}
                             <video width="300" height="400" controls>
-                                <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/webm">
-                                <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/ogg">
-                                <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/mp4">
+                                <source src="{{ MEDIA_URL }}{{tack.tack_file}}" type="video/webm">
+                                <source src="{{ MEDIA_URL }}{{tack.tack_file}}" type="video/ogg">
+                                <source src="{{ MEDIA_URL }}{{tack.tack_file}}" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         {% endif %}
@@ -48,22 +48,22 @@
                         <a class="ui right red corner label item" style="text-decoration:none;" href="#" id="confirm_fav">
                             <i class="star icon"></i>
                         </a>
-                        {% if tack.fileType == "image" %}
-                            <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="400" height="400" title={{ tack.Filename }}/>
-                        {% elif tack.fileType == "fromurl" %}
-                                    <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}/>
+                        {% if tack.file_type == "image" %}
+                            <img src="{{ MEDIA_URL }}{{ tack.tack_file }}" alt='No Image' width="400" height="400" title={{ tack.file_name }}/>
+                        {% elif tack.file_type == "fromurl" %}
+                                    <img src="{{ MEDIA_URL }}{{ tack.tack_file }}" alt='No Image' width="200" height="200" title={{ tack.file_name }}/>
                         {% else %}
                             <video width="300" height="400" controls>
-                                <source src="{{ MEDIA_URL }}{{ tack.tackFile }}" type="video/webm">
-                                <source src="{{ MEDIA_URL }}{{ tack.tackFile }}" type="video/ogg">
-                                <source src="{{ MEDIA_URL }}{{ tack.tackFile }}" type="video/mp4">
+                                <source src="{{ MEDIA_URL }}{{ tack.tack_file }}" type="video/webm">
+                                <source src="{{ MEDIA_URL }}{{ tack.tack_file }}" type="video/ogg">
+                                <source src="{{ MEDIA_URL }}{{ tack.tack_file }}" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         {% endif %}
                     {% endif %}
 
                 </div>
-                <div class="ui top left attached blue label">{{ tack.Filename }}</div>
+                <div class="ui top left attached blue label">{{ tack.file_name }}</div>
                 <div class="ui items">
                     <div class="item">
                         <div class="content">
@@ -184,9 +184,9 @@
       name="confirm_fav_form"
       id="confirm_fav_form"
       method="post" style="display:none"
-      action="/ConfirmFav?tackName={{ tack.Filename }}&boardName={{ board.Name }}"
+      action="/ConfirmFav?tackName={{ tack.file_name }}&boardName={{ board.name }}"
       enctype="multipart/form-data" >
-    {% if tack.isFavorite %}
+    {% if tack.is_favorite %}
         <div>
             <label> Remove from favorite?</label>
         </div>
@@ -197,7 +197,7 @@
         </div>
     {% else %}
         <div>
-            <label> Mark Tack '{{ tack.Filename }}' as Favourite? </label>
+            <label> Mark Tack '{{ tack.file_name }}' as Favourite? </label>
         </div>
 
         <div>
@@ -219,10 +219,10 @@
 
     <div class="field">
         <label for="tack_name">Upload new file:</label>
-        <div class="ui top center attached blue label">{{ tack.Filename }}</div>
+        <div class="ui top center attached blue label">{{ tack.file_name }}</div>
     </div>
 
-    <input type="hidden" name="tackName" value="{{ tack.Filename }}">
+    <input type="hidden" name="tackName" value="{{ tack.file_name }}">
 
     <div class="field">
         <label for="file">Image:</label>
@@ -250,10 +250,10 @@
         <select name="ex_board">
             {% for board in boards %}
                 <option name =""
-                        value="{{ board.Name }}"
+                        value="{{ board.name }}"
 
-                        {% if tack.board == board.Name %} selected="selected" {% endif %}>
-                    {{ board.Name }}
+                        {% if tack.board == board.name %} selected="selected" {% endif %}>
+                    {{ board.name }}
                 </option>
             {% endfor %}
         </select>
