updated ui height

--- a/tack/Templates/BoardsHome.html
+++ b/tack/Templates/BoardsHome.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-<section class="container">
+<section class="container" style="height: auto">
     <div id="wrapper"  style="width: 100%">
         {% if  tacks == "" %}<div class="ui label">There are no tacks in this board! Add a tack!</div> {% endif %}
         <div class = "ui four column grid">
