--- a/tack/Templates/Dashboard.html
+++ b/tack/Templates/Dashboard.html
@@ -163,7 +163,7 @@
 
 
 
-<section class="container">
+<section class="container" style="height: auto">
     <div id="wrapper" style="width: 100%">
         <div class="ui large blue label">{% if yourBoards == "None" %}You have not created any boards! Create a board and get started!
         {% else %}Boards you created:</div>
@@ -196,7 +196,7 @@
             </div>
     </div>
 </section>
-<section class="container">
+<section class="container" style="height: auto">
     <div id="wrapper"  style="width: 100%">
         <div class="ui large blue label">{% if otherBoards == "None" %}Follow a user to view more boards of your interest!
         {% else %}Boards you follow:</div>
