--- a/tack/Templates/CreateTackInBoard.html
+++ b/tack/Templates/CreateTackInBoard.html
@@ -17,6 +17,20 @@
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Create Tack</title>
+    <script type="text/javascript">
+        //Function to submit the form
+        function execute()
+        {
+            if(document.getElementById('file').value!=''||document.getElementById('tack_url').value!='')
+            {
+                document.sender.submit();
+            }
+            else
+            {
+                alert("Upload a file or provide a url to create a tack");
+            }
+        }
+    </script>
 </head>
 <body>
 <div class="ui inverted tiered menu">
@@ -55,7 +69,7 @@
         <div id="container_demo">
             <div id="wrapper">
                 <div id="createtack" class="ui form segment" >
-                    <form action="/saveTack" method="post" enctype="multipart/form-data">
+                    <form action="/saveTack"  method="post" enctype="multipart/form-data" name="sender" id="sender">
                         <div class="field">
                             <label for="tack_name">Filename:</label>
                             <div class="input">
@@ -65,13 +79,13 @@
                         <div class="field">
                             <label for="file">Image/Video:</label>
                             <div class="input">
-                                <input type="file" name="file" id="file" required="required"><br>
+                                <input type="file" name="file" id="file"><br>
                             </div>
                         </div>
                         <div class="field">
                             <label for="tack_url">URL:</label>
                             <div class="input">
-                                <input type="url" name="tack_url" placeholder="URL to tack"></br>
+                                <input type="url" id="tack_url" name="tack_url" placeholder="URL to tack"></br>
                             </div>
                         </div>
                         <div class="field">
@@ -82,7 +96,7 @@
                         </div>
                         <input type="hidden" name="ex_board" value="{{ boardName }}">
                         <input type="hidden" name="new_board" value="">
-                        <input class="ui button blue" type="submit" name="submit" value="Create!">
+                        <input class="ui button blue" type="button" name="submitit" value="Create!" onclick="execute()">
                     </form>
                 </div>
             </div>
