Fixed Create tack page(outside board)

--- a/tack/Templates/CreateTack.html
+++ b/tack/Templates/CreateTack.html
@@ -198,7 +198,7 @@
                         <input id="new_board" name="new_board" type="hidden">
                         <br />
 
-                        <input class="ui button blue" type="button" name="submit" value="Create!" onclick="execute()">
+                        <input class="ui button blue" type="button" name="submitit" value="Create!" onclick="execute()">
                     </form>
                 </div>
             </div>
